[tool.poetry]
name = "pycounts_yike"
version = "0.1.0"
description = "calculate words counts in text file(practice for 524)"
authors = ["ike Shi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
